[package]
name = "tg-bot-for-maintaining"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }
octocrab = "0.41"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "chrono",
] }
regex = "1"
url = "2"
openssl = { version = "0.10", features = ["vendored"] }
